Added conditional request handling.
